chore: apply biome

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "ogp-worker",
-  "scripts": {
-    "dev": "wrangler dev",
-    "deploy": "wrangler deploy --minify"
-  },
-  "dependencies": {
-    "hono": "^4.6.20"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250109.0",
-    "wrangler": "^3.101.0"
-  }
+	"name": "ogp-worker",
+	"scripts": {
+		"dev": "wrangler dev",
+		"deploy": "wrangler deploy --minify",
+		"lint": "biome lint --write",
+		"format": "biome format --write",
+		"check": "biome check --write"
+	},
+	"dependencies": {
+		"hono": "^4.6.20"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@cloudflare/workers-types": "^4.20250109.0",
+		"wrangler": "^3.101.0"
+	}
 }
