--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@cloudflare/workers-types": "^4.20250109.0",
+		"@types/react": "^19.0.8",
 		"wrangler": "^3.101.0"
 	},
-  "engines": {
-    "node": ">=20.0.0"
-  }
+	"engines": {
+		"node": ">=20.0.0"
+	}
 }
