--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
 		"check": "biome check --write"
 	},
 	"dependencies": {
-		"fast-xml-parser": "^5.1.0",
-		"hono": "^4.7.5",
+		"fast-xml-parser": "^5.2.3",
+		"hono": "^4.7.9",
 		"satori": "^0.12.2",
 		"svg2png-wasm": "^1.4.1",
 		"yoga-wasm-web": "^0.3.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@cloudflare/workers-types": "^4.20250403.0",
-		"@types/react": "^19.1.0",
-		"wrangler": "^4.7.0"
+		"@cloudflare/workers-types": "^4.20250510.0",
+		"@types/react": "^19.1.4",
+		"wrangler": "^4.14.4"
 	},
 	"engines": {
 		"node": ">=20.0.0"
@@ -29,5 +29,6 @@
 			"sharp",
 			"workerd"
 		]
-	}
+	},
+	"packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
